--- a/server/mainwindow.ui
+++ b/server/mainwindow.ui
@@ -25,7 +25,7 @@
   <property name="windowTitle">
    <string>Сервер</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -205,15 +205,15 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QSlider" name="angleSlider">
+       <widget class="RealSlider" name="angleSlider">
         <property name="minimum">
-         <number>2</number>
+         <number>200</number>
         </property>
         <property name="maximum">
-         <number>5</number>
+         <number>500</number>
         </property>
         <property name="pageStep">
-         <number>1</number>
+         <number>100</number>
         </property>
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
@@ -222,14 +222,14 @@
          <enum>QSlider::TickPosition::TicksBothSides</enum>
         </property>
         <property name="tickInterval">
-         <number>1</number>
+         <number>100</number>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="send">
       <property name="text">
        <string>Отправить</string>
       </property>
@@ -252,30 +252,14 @@
  <resources/>
  <connections>
   <connection>
-   <sender>angleSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>angleLabel</receiver>
-   <slot>setNum(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>334</x>
-     <y>72</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>380</x>
-     <y>73</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>horizontalSlider</sender>
    <signal>valueChanged(double)</signal>
    <receiver>horisontLabel</receiver>
    <slot>setNum(double)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>341</x>
-     <y>111</y>
+     <x>336</x>
+     <y>120</y>
     </hint>
     <hint type="destinationlabel">
      <x>377</x>
@@ -290,8 +274,8 @@
    <slot>setNum(double)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>340</x>
-     <y>146</y>
+     <x>336</x>
+     <y>156</y>
     </hint>
     <hint type="destinationlabel">
      <x>384</x>
@@ -299,5 +283,40 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>angleSlider</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>angleLabel</receiver>
+   <slot>setNum(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>329</x>
+     <y>70</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>363</x>
+     <y>79</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>send</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>sendDatagram()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>298</x>
+     <y>185</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>281</x>
+     <y>241</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
+ <slots>
+  <slot>sendDatagram()</slot>
+ </slots>
 </ui>
